yaml_configs/zigbee2mqtt/03-zigbee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
  namespace: zigbee
spec:
  selector:
    matchLabels:
      app: zigbee
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zigbee
      annotations:
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "multus-iot",
            "namespace": "default",
            "mac": "70:cb:57:bb:d4:a2",
            "ips": ["192.168.0.189/24"]
          }]
    spec:
      containers:
      - image: koenkk/zigbee2mqtt:latest
        name: zigbee
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
          subPath: data
        - name: usb
          mountPath: /dev/ttyUSB0
        - name: udev
          mountPath: /run/udev
        securityContext:
          privileged: true
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zigbee-data-pvc
      - name: usb
        hostPath:
          path: /dev/ttyUSB0
      - name: udev
        hostPath:
          path: /run/udev
